Apply modernizer recommendations
- replace usage of IOUtils with new String()
- replace usage of DatatypeConverter with Base64

JIRA: GNMI-31
Change-Id: Ice2bb231970b1e814be4bef128a682a86cfa941b
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>